# Agronote-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/app/: main.py
src/app/api/: routes.py
src/app/models/: field_data.py  weather_dto.py  weather_orm.py
src/app/repositories/: field_repository.py  weather_repository.py
src/app/schemas/: field_schema.py
src/app/services/: irrigation.py  weather_interface.py  weather_service.py
tests/: test_root.py
